  like %l. Also, the "inf"/"infinity"/"nan"/"nan()" keywords are processed.

- The strftime() %z conversion now prints the time zone difference as a
  "decimal" number. That is, if the difference is 5 hours and 30 minutes,
  then %z will now print "530" rather than "330".

- mktime() now handles one leap second gracefully.


c.lib 1.191 (9.4.2005)

- The name of the public record locking semaphore has to be preallocated
  for OS4 if the AllocSysObject() function is used to create it.

- Moved the signal block mask and the signal function table out of
  signal_data.c and into signal_raise.c where they are actually used.
  This makes it possible to override the default definition of the
  __check_abort_enabled variable in your own programs.

- raise() no longer resets the signal handler before it invokes the one
  currently configured. It merely blocks the delivery of the respective
  signal to prevent recursion.

- raise() now drops into abort() if a signal handler is set to
  SIG_DFL. The exception is in SIGINT delivery, which has the
  effect of printing a different termination message but otherwise
  program flow takes the same path as abort().

- Moved the __UtilityBase/__IUtility variable declarations into
  a separate file.

- Simplified the library/open close code in "stdlib_main.c".

- File descriptors produced by dup() or dup2() now work exactly like
  the original file descriptors they are duplicates of. I modified the
  function which maps file descriptor numbers to file descriptor
  table entries to return the table entries of the original files.

- In the thread-safe library, duplicated stdin/stdout/stderr
  descriptors now work like the "real" ones. This is true even if
  the "real" ones were closed and only their former aliases remain.

- Invoking fstat() on what maps to a con-handler stream now produces
  information identifying it as a character special file.

- Added more code and changes contributed by Peter Bengtsson, thank you